Scalastyle library upgraded. Using config instead of properties in order to get labels and falback descriptions. Using surefire with JUnit runner to run tests instead of scalatest Maven plugin. Scala upgraded to 2.11.