@@ -12,7 +12,7 @@
     <groupId>com.ncredinburgh</groupId>
     <artifactId>sonar-scalastyle</artifactId>
     <packaging>sonar-plugin</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <name>Sonar Scalastyle Plugin</name>
     <description>Enables analysis of Scala projects with Scalastyle.</description>
@@ -32,8 +32,8 @@
         <sonar.pluginName>Scalastyle</sonar.pluginName>
         <sonar.pluginClass>com.ncredinburgh.sonar.scalastyle.ScalastylePlugin</sonar.pluginClass>
 
-        <scala.version>2.10.4</scala.version>
-        <scala.major.version>2.10</scala.major.version>
+        <scala.version>2.11.4</scala.version>
+        <scala.major.version>2.11</scala.major.version>
 
         <!-- needed? -->
         <sonar.language>scala</sonar.language>
@@ -56,8 +56,8 @@
 
         <dependency>
             <groupId>org.scalastyle</groupId>
-            <artifactId>scalastyle_2.10</artifactId>
-            <version>0.5.0</version>
+            <artifactId>scalastyle_${scala.major.version}</artifactId>
+            <version>0.7.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
@@ -102,6 +102,13 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
 
@@ -163,30 +170,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- disable surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
-            </plugin>
-            <!-- enable scalatest -->
-            <plugin>
-                <groupId>org.scalatest</groupId>
-                <artifactId>scalatest-maven-plugin</artifactId>
-                <version>1.0</version>
-                <executions>
-                    <execution>
-                        <id>test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=512m -Xmx1024m</argLine>
+                    <includes>
+                        <include>**/*Spec.java</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
